--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -10,26 +10,25 @@
     <!-- navigation -->
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Jorge Clemente Palacios</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <i class="fas fa-link"></i> Jose Clemente Palacioss
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+          aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-    
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav me-auto">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Inicio</a>
+              <a class="nav-link" href="/">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="docente">Profesores</a>
+              <a class="nav-link" href="/docente">DOCENTES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="estudiante">Esudiantes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Materias</a>
+              <a class="nav-link" href="/estudiante">ESTUDIANTES</a>
             </li>
           </ul>
         </div>
