--- a/src/views/docente_edit.ejs
+++ b/src/views/docente_edit.ejs
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-5 offset-md-3 card">
       <div class="card-body">
-        <div class="card-header">MOdificacion Docente</div>
+        <div class="card-header">Modificacion Docente</div>
         <div class="ca"></div>
         <form action="/update/<%= data.idDocente %>" method="POST">
           <div class="form-group">
