--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -28,7 +28,7 @@
               <a class="nav-link" href="/docente">DOCENTES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/estudiante.ejs">ESTUDIANTES</a>
+              <a class="nav-link" href="/estudiante">ESTUDIANTES</a>
             </li>
           </ul>
         </div>
