--- a/src/views/estudiantes_edit.ejs
+++ b/src/views/estudiantes_edit.ejs
@@ -5,7 +5,7 @@
     <div class="col-md-5 offset-md-3 card">
       <div class="card-body">
         <div class="card-header">Creacion Estudiante</div>
-        <form action="/update/<%= data.idEstudiante %>" method="POST">
+        <form action="/updateestudiante/<%= data.idEstudiante %>" method="POST">
           <div class="form-group">
             <input type="text" name="nombresEstudiante" value="<%= data.nombresEstudiante%>" placeholder="Nombres" class="form-control" autofocus>
           </div>
