--- a/src/views/docente_edit.ejs
+++ b/src/views/docente_edit.ejs
@@ -6,7 +6,7 @@
       <div class="card-body">
         <div class="card-header">Modificacion Docente</div>
         <div class="ca"></div>
-        <form action="docente/update/<%= data.idDocente %>" method="POST">
+        <form action="/update/<%= data.idDocente %>" method="POST">
           <div class="form-group">
             <input type="text" name="nombresDocente" value="<%= data.nombresDocente%>" placeholder="Nombres" class="form-control" autofocus>
           </div>
