--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -2,18 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Jose Clemente Palacios</title>
-    <!-- NAVIGATION -->
+    <title>Jorge Clemente Palacios</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
   </head>
   <body>
-    <!-- navigation -->
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <i class="fas fa-link"></i> Jose Clemente Palacioss
+          <i class="fas fa-link"></i> Jorge Clemente Palacios
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
